tests/integration_tests/snapshots/integration_tests__prod_tests__incorrect_root_bug.snap
---
source: tests/integration_tests/prod_tests.rs
expression: response
---
{
  "context": {
    "slot": 320879219
  },
  "value": {
    "items": [],
    "cursor": null
  }
}
